<resources>
    <string name="app_name">TimeTracker</string>
    <string name="add_new_item">Add new item</string>
    <string name="name">Name</string>
    <string name="level">Level</string>
    <string name="hours">Hours</string>
    <string name="description">Description</string>
    <string name="take_picture">Take a picture of the item!</string>
    <string name="add_to_list">Add to List</string>
    <string name="cancel">Cancel</string>
    <string name="hours_summary">Total Hours:\nCategory 1: %1$.2f\nCategory 2: %2$.2f\nUncategorized: %3$.2f</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="reselect_date">Reselect Date</string>
    <string-array name="levels_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
